--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "main": "index.js",
   "scripts": {
     "start": "bun index.html --outdir=build --sourcemap=linked",
-    "build": "bun build index.html --outdir=docs"
+    "build": "bun build index.html --outdir=docs",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d docs"
   },
   "license": "ISC",
   "devDependencies": {
+    "gh-pages": "^6.3.0",
     "jest": "^29.0.3"
   }
 }
